# Lb_OOP_3

./: CMakeLists.txt  README.md  main.cpp
Classes/: CodeBlocks.cpp  CodeBlocks.h  OperatingSystem.cpp  OperatingSystem.h  Printer.cpp  Printer.h  Software.cpp  Software.h  WindowsOS.cpp  WindowsOS.h
