cmake_minimum_required(VERSION 3.15)

project(Lb_OOP_3)

set(CMAKE_CXX_STANDARD 20)

add_executable(Lb_OOP_3 main.cpp main.cpp Classes/Software.cpp Classes/Software.h Classes/CodeBlocks.cpp Classes/CodeBlocks.h Classes/OperatingSystem.cpp Classes/OperatingSystem.h Classes/WindowsOS.cpp Classes/WindowsOS.h Classes/Printer.cpp Classes/Printer.h)